--- a/app/views/pieces/index.html.erb
+++ b/app/views/pieces/index.html.erb
@@ -1,18 +1,18 @@
-<h1>Listing pieces</h1>
+<h1><%= t('.pieces') %></h1>
 
 <%= form_tag pieces_path, :method => 'get' do %>  
   <p>  
     <%= text_field_tag :search, params[:search] %>  
-    <%= submit_tag "Search", :name => nil %>  
+    <%= submit_tag t('.search'), :name => nil %>  
   </p>  
 <% end %>  
 
 <table>
   <tr>
-    <th>Title</th>
-    <th>Composer</th>
-    <th>Drawer</th>
-    <th>Number</th>
+    <th><%= t('.title') %></th>
+    <th><%= t('.composer') %></th>
+    <th><%= t('.drawer') %></th>
+    <th><%= t('.number') %></th>
     <th></th>
     <th></th>
     <th></th>
@@ -24,14 +24,14 @@
     <td><%= piece.composer %></td>
     <td><%= piece.drawer %></td>
     <td><%= piece.number %></td>
-    <td><%= link_to 'Show', piece %></td>
-    <td><%= link_to 'Edit', edit_piece_path(piece) %></td>
-    <td><%= link_to 'Destroy', piece, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to t('.show_piece'), piece %></td>
+    <td><%= link_to t('.edit_piece'), edit_piece_path(piece) %></td>
+    <td><%= link_to t('.destroy_piece'), piece, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Piece', new_piece_path %>
+<%= link_to t('.new_piece'), new_piece_path %>
 <p><%= will_paginate @pieces %></p>
