--- a/app/assets/stylesheets/pieces.css.scss
+++ b/app/assets/stylesheets/pieces.css.scss
@@ -7,12 +7,7 @@
     border-collapse: collapse;
   }
 
-  table tr th {
-    padding: 5px;
-    vertical-align: top;
-  }
-
-  table tr td {
+  table tr th, table tr td {
     padding: 5px;
     vertical-align: top;
   }
@@ -37,20 +32,26 @@
     background: white;
   }
 
-  .new_piece_link {
-    color: #105cb6;
+  .input_field {
+    border: 1px solid #105cb6;
+    background: transparent;
+    padding: 0.2em 0.5em;
   }
 
-  .action_edit {
+  .button, .destroy_button {
     color: #105cb6;
+    border: 1px solid #105cb6;
+    text-decoration: none;
+    padding: 0.2em 0.5em;
+    background: transparent;
   }
-
-  .action_destroy {
+  .button:hover, .button:focus {
+    color: #000033;
+    border-color: #000033; 
+  }
+  .destroy_button:hover, .destroy_button:focus {
     color: red;
-  }
-
-  .back_to_pieces_list_link {
-    color: #105cb6;
+    border: 1px solid red;
   }
 
 }
