--- a/app/views/pieces/new.html.erb
+++ b/app/views/pieces/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to t('.back_to_pieces_list'), pieces_path, :class => "back_to_pieces_list_link"  %>
+<%= link_to t('.back_to_pieces_list'), pieces_path, :class => "button"  %>
