--- a/app/views/pieces/show.html.erb
+++ b/app/views/pieces/show.html.erb
@@ -21,5 +21,5 @@
 </p>
 
 
-<%= link_to t('.edit_piece'), edit_piece_path(@piece), :class => "action_edit" %> |
-<%= link_to t('.back_to_pieces_list'), pieces_path, :class => "back_to_pieces_list_link" %>
+<%= link_to t('.edit_piece'), edit_piece_path(@piece), :class => "button" %> |
+<%= link_to t('.back_to_pieces_list'), pieces_path, :class => "button" %>
