--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 </head>
 <body class='<%= controller.controller_name %>'>
 
+<%= image_tag "/assets/logo_compressed.png" %>
+
 <h1><%= t('.title') %></h1>
 
 <%= yield %>
