fehlende Übersetzung, kleineres Logo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body class='<%= controller.controller_name %>'>
 
-<%= image_tag "/assets/logo_compressed.png" %>
+<%= image_tag "/assets/logo_compressed_small.png" %>
 
 <h1><%= t('.title') %></h1>
 
